# wheeltec_arm_ros2

./: .gitignore  README.md
src/arm_demo/: CMakeLists.txt  package.xml
src/arm_demo/src/: arm_demo.cpp
src/mini_mec_six_arm/: CMakeLists.txt  package.xml
src/mini_mec_six_arm/config/: joint_names_mini_mec_six_arm.yaml
src/mini_mec_six_arm/meshes/: base_link.STL  left_front_wheel_link.STL  left_rear_wheel_link.STL  link1.STL  link10.STL  link11.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL  link9.STL  right_front_wheel_link.STL  right_rear_wheel_link.STL
src/mini_mec_six_arm/urdf/: mini_mec_six_arm.csv
src/mini_mec_six_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mini_mec_six_arm_config/config/: joint_limits.yaml  kinematics.yaml  mini_mec_six_arm.ros2_control.xacro  mini_mec_six_arm.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/mini_mec_six_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mini_mec_six_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mini_mec_six_arm_moveit_config/config/: initial_positions.yaml  kinematics.yaml  mini_mec_six_arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/mini_mec_six_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/wheeltec_arm_pick/: CMakeLists.txt  package.xml
src/wheeltec_arm_pick/include/wheeltec_arm_pick/: quaternion_solution.h  wheeltec_arm_six.h
src/wheeltec_arm_pick/launch/: base_serial.launch.py
src/wheeltec_arm_pick/src/: quaternion_solution.cpp  wheeltec_arm_six.cpp  wheeltec_arm_six.cpp.bak
src/wheeltec_arm_pick_msgs/: CMakeLists.txt  package.xml
src/wheeltec_arm_pick_msgs/msg/: PickAndPut.msg  PositionColor.msg  SixArmPosition.msg
